--- a/index.html
+++ b/index.html
@@ -8,13 +8,93 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-light bg-light">
+  <nav class="navbar navbar-expand-md navbar-custom">
+    <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="Logo_Rough_Draft.png" width="300" height="70" class="d-inline-block align-top" alt="Logo">
+        <img src="Logos/Logo_Rough_Draft_Transparent_Light.png" width="120" height="30" class="d-inline-block align-top" alt="Logo">
       </a>
-    </nav>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+        <div class="navbar-nav ml-auto">
+          <a class="nav-item nav-link" href="#">NASA APODs</a>
+          <a class="nav-item nav-link" href="#">Galaxy Overview</a>
+          <a class="nav-item nav-link" href="#">Planet Profiles</a>
+        </div>
+      </div>
+    </div>
+  </nav>
 
-    <h1> This is a test </h1>
+  <div class="container">
+    <h2> This is a test </h1>
+
+    <div class="img-thumbnail">
+      <h2>NASA Astronomy Picture of the Day</h2>
+      <div>
+        <img src="example_APOD.jpg" alt="APOD" class="img-fluid">
+      </div>
+      <h6> <strong>Title:</strong> Mars in the Loop</h6>
+      <h6> <strong>By:</strong> Mike Trout</h6>
+    </div>
+  </div>
+
+  <footer class="page-footer font-small" id="footer">
+      <div class="container">
+        <div class="row text-center d-flex justify-content-center pt-5 mb-3">
+
+          <div class="col-md-2 mb-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">About Us</a>
+            </h6>
+          </div>
+
+          <div class="col-md-2 mb-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">Data</a>
+            </h6>
+          </div>
+
+          <div class="col-md-2 mb-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">Contact Us</a>
+            </h6>
+          </div>
+
+          <div class="col-md-2 mb-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">Other</a>
+            </h6>
+          </div>
+
+          <div class="col-md-2 mb-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">Resources</a>
+            </h6>
+          </div>
+
+        </div>
+
+        <hr style="margin: 0 15%;">
+
+        <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
+          <div class="col-md-8 col-12 mt-5">
+            <p style="line-height: 1.7rem">This is where I will put a brief description of Stat Galaxy.</p>
+          </div>
+        </div>
+        <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
+
+      </div>
+
+      <div class="footer-copyright text-center py-3">
+        <a href="https://www.statgalaxy.com">StatGalaxy.com</a>
+      </div>
+
+    </footer>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
   </body>
 </html>
