Finished template for APoD

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Stat Galaxy</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="StyleSheets/main.css">
   </head>
   <body>
 
@@ -18,7 +18,7 @@
       </button>
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <div class="navbar-nav ml-auto">
-          <a class="nav-item nav-link" href="#">NASA APODs</a>
+          <a class="nav-item nav-link" href="NASA_APOD.html">NASA APoDs</a>
           <a class="nav-item nav-link" href="#">Galaxy Overview</a>
           <a class="nav-item nav-link" href="#">Planet Profiles</a>
         </div>
